// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IngressGatewayNlb > Props > Override Envoy Repository 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "annotations": {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::123456789012:role/ingress-role",
      },
      "name": "ingress-gateway-mygateway",
    },
  },
  {
    "apiVersion": "appmesh.k8s.aws/v1beta2",
    "kind": "VirtualGateway",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "gatewayRouteSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "listeners": [
        {
          "portMapping": {
            "port": 8088,
            "protocol": "http",
          },
        },
      ],
      "namespaceSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshIngress": "enabled",
        },
      },
      "podSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "selector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "aws.tfs.engineering/appMeshGateway": "mygateway",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "aws.tfs.engineering/appMeshGateway": "mygateway",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "containers": [
            {
              "image": "public.ecr.aws/myrepo/envoy:v1.29.4.0-prod",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "curl -s http://localhost:9901/server_info | grep state | grep -q LIVE",
                  ],
                },
              },
              "name": "envoy",
              "ports": [
                {
                  "containerPort": 8088,
                  "name": "http",
                  "protocol": "TCP",
                },
                {
                  "containerPort": 9901,
                  "name": "http-admin",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 9901,
                },
              },
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "serviceAccountName": "ingress-gateway-mygateway",
          "terminationGracePeriodSeconds": 30,
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v1",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "maxReplicas": 10,
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "ingress-gateway-mygateway",
      },
      "targetCPUUtilizationPercentage": 80,
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
        "service.beta.kubernetes.io/aws-load-balancer-scheme": "internal",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-west-2:123456789012:certificate/abcdef01-1234-5678-9012-abcdef0123456",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https",
        "service.beta.kubernetes.io/aws-load-balancer-type": "nlb",
      },
      "labels": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "externalTrafficPolicy": "Local",
      "ports": [
        {
          "name": "http",
          "port": 80,
          "targetPort": 8088,
        },
        {
          "name": "https",
          "port": 443,
          "targetPort": 9901,
        },
      ],
      "selector": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "type": "LoadBalancer",
    },
  },
]
`;

exports[`IngressGatewayNlb > Props > Override Envoy Version 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "annotations": {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::123456789012:role/ingress-role",
      },
      "name": "ingress-gateway-mygateway",
    },
  },
  {
    "apiVersion": "appmesh.k8s.aws/v1beta2",
    "kind": "VirtualGateway",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "gatewayRouteSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "listeners": [
        {
          "portMapping": {
            "port": 8088,
            "protocol": "http",
          },
        },
      ],
      "namespaceSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshIngress": "enabled",
        },
      },
      "podSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "selector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "aws.tfs.engineering/appMeshGateway": "mygateway",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "aws.tfs.engineering/appMeshGateway": "mygateway",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "containers": [
            {
              "image": "public.ecr.aws/appmesh/aws-appmesh-envoy:v1.30.4.0-prod",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "curl -s http://localhost:9901/server_info | grep state | grep -q LIVE",
                  ],
                },
              },
              "name": "envoy",
              "ports": [
                {
                  "containerPort": 8088,
                  "name": "http",
                  "protocol": "TCP",
                },
                {
                  "containerPort": 9901,
                  "name": "http-admin",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 9901,
                },
              },
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "serviceAccountName": "ingress-gateway-mygateway",
          "terminationGracePeriodSeconds": 30,
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v1",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "maxReplicas": 10,
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "ingress-gateway-mygateway",
      },
      "targetCPUUtilizationPercentage": 80,
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
        "service.beta.kubernetes.io/aws-load-balancer-scheme": "internal",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-west-2:123456789012:certificate/abcdef01-1234-5678-9012-abcdef0123456",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https",
        "service.beta.kubernetes.io/aws-load-balancer-type": "nlb",
      },
      "labels": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "externalTrafficPolicy": "Local",
      "ports": [
        {
          "name": "http",
          "port": 80,
          "targetPort": 8088,
        },
        {
          "name": "https",
          "port": 443,
          "targetPort": 9901,
        },
      ],
      "selector": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "type": "LoadBalancer",
    },
  },
]
`;

exports[`IngressGatewayNlb > Props > Override Gateway HPA Average CPU Utilization 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "annotations": {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::123456789012:role/ingress-role",
      },
      "name": "ingress-gateway-mygateway",
    },
  },
  {
    "apiVersion": "appmesh.k8s.aws/v1beta2",
    "kind": "VirtualGateway",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "gatewayRouteSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "listeners": [
        {
          "portMapping": {
            "port": 8088,
            "protocol": "http",
          },
        },
      ],
      "namespaceSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshIngress": "enabled",
        },
      },
      "podSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "selector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "aws.tfs.engineering/appMeshGateway": "mygateway",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "aws.tfs.engineering/appMeshGateway": "mygateway",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "containers": [
            {
              "image": "public.ecr.aws/appmesh/aws-appmesh-envoy:v1.29.4.0-prod",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "curl -s http://localhost:9901/server_info | grep state | grep -q LIVE",
                  ],
                },
              },
              "name": "envoy",
              "ports": [
                {
                  "containerPort": 8088,
                  "name": "http",
                  "protocol": "TCP",
                },
                {
                  "containerPort": 9901,
                  "name": "http-admin",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 9901,
                },
              },
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "serviceAccountName": "ingress-gateway-mygateway",
          "terminationGracePeriodSeconds": 30,
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v1",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "maxReplicas": 10,
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "ingress-gateway-mygateway",
      },
      "targetCPUUtilizationPercentage": 50,
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
        "service.beta.kubernetes.io/aws-load-balancer-scheme": "internal",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-west-2:123456789012:certificate/abcdef01-1234-5678-9012-abcdef0123456",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https",
        "service.beta.kubernetes.io/aws-load-balancer-type": "nlb",
      },
      "labels": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "externalTrafficPolicy": "Local",
      "ports": [
        {
          "name": "http",
          "port": 80,
          "targetPort": 8088,
        },
        {
          "name": "https",
          "port": 443,
          "targetPort": 9901,
        },
      ],
      "selector": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "type": "LoadBalancer",
    },
  },
]
`;

exports[`IngressGatewayNlb > Props > Override Gateway Max Replicas 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "annotations": {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::123456789012:role/ingress-role",
      },
      "name": "ingress-gateway-mygateway",
    },
  },
  {
    "apiVersion": "appmesh.k8s.aws/v1beta2",
    "kind": "VirtualGateway",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "gatewayRouteSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "listeners": [
        {
          "portMapping": {
            "port": 8088,
            "protocol": "http",
          },
        },
      ],
      "namespaceSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshIngress": "enabled",
        },
      },
      "podSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "selector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "aws.tfs.engineering/appMeshGateway": "mygateway",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "aws.tfs.engineering/appMeshGateway": "mygateway",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "containers": [
            {
              "image": "public.ecr.aws/appmesh/aws-appmesh-envoy:v1.29.4.0-prod",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "curl -s http://localhost:9901/server_info | grep state | grep -q LIVE",
                  ],
                },
              },
              "name": "envoy",
              "ports": [
                {
                  "containerPort": 8088,
                  "name": "http",
                  "protocol": "TCP",
                },
                {
                  "containerPort": 9901,
                  "name": "http-admin",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 9901,
                },
              },
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "serviceAccountName": "ingress-gateway-mygateway",
          "terminationGracePeriodSeconds": 30,
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v1",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "maxReplicas": 10,
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "ingress-gateway-mygateway",
      },
      "targetCPUUtilizationPercentage": 80,
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
        "service.beta.kubernetes.io/aws-load-balancer-scheme": "internal",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-west-2:123456789012:certificate/abcdef01-1234-5678-9012-abcdef0123456",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https",
        "service.beta.kubernetes.io/aws-load-balancer-type": "nlb",
      },
      "labels": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "externalTrafficPolicy": "Local",
      "ports": [
        {
          "name": "http",
          "port": 80,
          "targetPort": 8088,
        },
        {
          "name": "https",
          "port": 443,
          "targetPort": 9901,
        },
      ],
      "selector": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "type": "LoadBalancer",
    },
  },
]
`;

exports[`IngressGatewayNlb > Props > Override Gateway Min Replicas 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "annotations": {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::123456789012:role/ingress-role",
      },
      "name": "ingress-gateway-mygateway",
    },
  },
  {
    "apiVersion": "appmesh.k8s.aws/v1beta2",
    "kind": "VirtualGateway",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "gatewayRouteSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "listeners": [
        {
          "portMapping": {
            "port": 8088,
            "protocol": "http",
          },
        },
      ],
      "namespaceSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshIngress": "enabled",
        },
      },
      "podSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "selector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "aws.tfs.engineering/appMeshGateway": "mygateway",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "aws.tfs.engineering/appMeshGateway": "mygateway",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "containers": [
            {
              "image": "public.ecr.aws/appmesh/aws-appmesh-envoy:v1.29.4.0-prod",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "curl -s http://localhost:9901/server_info | grep state | grep -q LIVE",
                  ],
                },
              },
              "name": "envoy",
              "ports": [
                {
                  "containerPort": 8088,
                  "name": "http",
                  "protocol": "TCP",
                },
                {
                  "containerPort": 9901,
                  "name": "http-admin",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 9901,
                },
              },
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "serviceAccountName": "ingress-gateway-mygateway",
          "terminationGracePeriodSeconds": 30,
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v1",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "maxReplicas": 10,
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "ingress-gateway-mygateway",
      },
      "targetCPUUtilizationPercentage": 80,
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
        "service.beta.kubernetes.io/aws-load-balancer-scheme": "internal",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-west-2:123456789012:certificate/abcdef01-1234-5678-9012-abcdef0123456",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https",
        "service.beta.kubernetes.io/aws-load-balancer-type": "nlb",
      },
      "labels": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "externalTrafficPolicy": "Local",
      "ports": [
        {
          "name": "http",
          "port": 80,
          "targetPort": 8088,
        },
        {
          "name": "https",
          "port": 443,
          "targetPort": 9901,
        },
      ],
      "selector": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "type": "LoadBalancer",
    },
  },
]
`;

exports[`IngressGatewayNlb > Props > Public Gateway 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "annotations": {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::123456789012:role/ingress-role",
      },
      "name": "ingress-gateway-mygateway",
    },
  },
  {
    "apiVersion": "appmesh.k8s.aws/v1beta2",
    "kind": "VirtualGateway",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "gatewayRouteSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "listeners": [
        {
          "portMapping": {
            "port": 8088,
            "protocol": "http",
          },
        },
      ],
      "namespaceSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshIngress": "enabled",
        },
      },
      "podSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "selector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "aws.tfs.engineering/appMeshGateway": "mygateway",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "aws.tfs.engineering/appMeshGateway": "mygateway",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "containers": [
            {
              "image": "public.ecr.aws/appmesh/aws-appmesh-envoy:v1.29.4.0-prod",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "curl -s http://localhost:9901/server_info | grep state | grep -q LIVE",
                  ],
                },
              },
              "name": "envoy",
              "ports": [
                {
                  "containerPort": 8088,
                  "name": "http",
                  "protocol": "TCP",
                },
                {
                  "containerPort": 9901,
                  "name": "http-admin",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 9901,
                },
              },
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "serviceAccountName": "ingress-gateway-mygateway",
          "terminationGracePeriodSeconds": 30,
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v1",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "maxReplicas": 10,
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "ingress-gateway-mygateway",
      },
      "targetCPUUtilizationPercentage": 80,
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
        "service.beta.kubernetes.io/aws-load-balancer-scheme": "internet-facing",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-west-2:123456789012:certificate/abcdef01-1234-5678-9012-abcdef0123456",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https",
        "service.beta.kubernetes.io/aws-load-balancer-type": "nlb",
      },
      "labels": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "externalTrafficPolicy": "Local",
      "ports": [
        {
          "name": "http",
          "port": 80,
          "targetPort": 8088,
        },
        {
          "name": "https",
          "port": 443,
          "targetPort": 9901,
        },
      ],
      "selector": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "type": "LoadBalancer",
    },
  },
]
`;

exports[`IngressGatewayNlb > Props > Required props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "annotations": {
        "eks.amazonaws.com/role-arn": "arn:aws:iam::123456789012:role/ingress-role",
      },
      "name": "ingress-gateway-mygateway",
    },
  },
  {
    "apiVersion": "appmesh.k8s.aws/v1beta2",
    "kind": "VirtualGateway",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "gatewayRouteSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "listeners": [
        {
          "portMapping": {
            "port": 8088,
            "protocol": "http",
          },
        },
      ],
      "namespaceSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshIngress": "enabled",
        },
      },
      "podSelector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "selector": {
        "matchLabels": {
          "aws.tfs.engineering/appMeshGateway": "mygateway",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "aws.tfs.engineering/appMeshGateway": "mygateway",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "aws.tfs.engineering/appMeshGateway": "mygateway",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "containers": [
            {
              "image": "public.ecr.aws/appmesh/aws-appmesh-envoy:v1.29.4.0-prod",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "exec": {
                  "command": [
                    "sh",
                    "-c",
                    "curl -s http://localhost:9901/server_info | grep state | grep -q LIVE",
                  ],
                },
              },
              "name": "envoy",
              "ports": [
                {
                  "containerPort": 8088,
                  "name": "http",
                  "protocol": "TCP",
                },
                {
                  "containerPort": 9901,
                  "name": "http-admin",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "initialDelaySeconds": 5,
                "tcpSocket": {
                  "port": 9901,
                },
              },
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
            },
          ],
          "serviceAccountName": "ingress-gateway-mygateway",
          "terminationGracePeriodSeconds": 30,
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v1",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "maxReplicas": 10,
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "ingress-gateway-mygateway",
      },
      "targetCPUUtilizationPercentage": 80,
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
        "service.beta.kubernetes.io/aws-load-balancer-scheme": "internal",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-cert": "arn:aws:acm:us-west-2:123456789012:certificate/abcdef01-1234-5678-9012-abcdef0123456",
        "service.beta.kubernetes.io/aws-load-balancer-ssl-ports": "https",
        "service.beta.kubernetes.io/aws-load-balancer-type": "nlb",
      },
      "labels": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "name": "ingress-gateway-mygateway",
    },
    "spec": {
      "externalTrafficPolicy": "Local",
      "ports": [
        {
          "name": "http",
          "port": 80,
          "targetPort": 8088,
        },
        {
          "name": "https",
          "port": 443,
          "targetPort": 9901,
        },
      ],
      "selector": {
        "aws.tfs.engineering/appMeshGateway": "mygateway",
      },
      "type": "LoadBalancer",
    },
  },
]
`;
